# sentiment-analysis

./: .gitignore  README.md  phrases.db  pyproject.toml
sentiment_analysis/: __main__.py  api.py  database.py  models.py
sentiment_analysis/api/: api.py  models.py
sentiment_analysis/config/: __init__.py
sentiment_analysis/nlp_classifier/: bert_classifier.py  classifier.py  config.json  huggingface.py  nlp_classifier.py  test.py  two_classifier.py
sentiment_analysis/templates/: home.html  layout.html
